# Rendering

./: .gitignore  CMakeLists.txt  flake.nix  lorenz.c  lorenz.h  main.c
